--- a/index.html
+++ b/index.html
@@ -95,15 +95,15 @@
 
                         <!-- ######## ABSTRACT #########-->
 
-                        <p>I am a year two Machine Learning Masters Student at <a href="https://www.univ-st-etienne.fr/fr/index.html">University Jean-Monnet</a>.
+                        <p>I am second year Machine Learning Masters Student at <a href="https://www.univ-st-etienne.fr/fr/index.html">University Jean-Monnet</a>.
                             <br>
-                            I am currently an intern at <a href="https://team.inria.fr/chroma/en/" > CHROMA </a> work on <strong>Deep Reinforcement Learning</strong> and <strong>Robotics</strong>.
+                            Currently I am an intern at <a href="https://team.inria.fr/chroma/en/" > CHROMA </a> work on <strong>Deep Reinforcement Learning</strong> and <strong>Robotics</strong>.
                             <br>
                             My supervisors are <a href="http://liris.cnrs.fr/christian.wolf/">Christian Wolf</a>, <a
                                     href="http://perso.citi-lab.fr/jdibangoy/#/">Jilles Dibangoye</a> and <a
                                     href="http://perso.citi-lab.fr/osimonin/"> Olivier Simonin</a>
                             <br>
-                            My end of masters internship focuses on the application of deep reinforcement learning to navigation tasks in simulated environments.
+                            My end of Masters internship focuses on the application of Deep Reinforcement Learning to navigation tasks in simulated environments.
                         </p>
 
 
