added second rl agent movie

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                             <br>
                             My end of Masters internship focuses on the application of Deep Reinforcement Learning to navigation tasks in simulated environments.
                         </p>
-
-
+                    <td width="1%">
+                        <img src="./images/photo.png">
+                    </td>
+                    </td>
 
                         <!-- ######## INFO  #########-->
 
@@ -117,17 +119,17 @@
                             <a href="https://www.linkedin.com/in/ed-beeching-3553b468/"> LinkedIn </a> 
                             <!-- <a href="https://twitter.com/fabienbaradel">Twitter</a>-->
                         </p>
+
+
+
+
+                </tr>
+
+            </table>
                         <p>Example of a Deep Reinforcement Learning Agent trained to gather health packs with the Advantage Actor Critic Algorithm.</p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/p_8eQWRh624" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-
-                    </td>
-                    <td width="1%">
-                        <img src="./images/photo.png">
-                    </td>
-                </tr>
-            </table>
-
+                        <p>Example of a Deep Reinforcement Learning Agent trained to explore a maze with the Advantage Actor Critic Algorithm.</p>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/wB6Qart8p7A" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
 
