--- a/index.html
+++ b/index.html
@@ -88,22 +88,22 @@
         <td>
             <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
                 <tr>
-                    <td width="67%" valign="middle">
+                    <td width="75%" valign="middle">
                         <p align="center">
                             <name>Edward Beeching</name>
                         </p>
 
                         <!-- ######## ABSTRACT #########-->
 
-                        <p>I am second year Machine Learning Masters Student at <a href="https://www.univ-st-etienne.fr/fr/index.html">University Jean-Monnet</a>.
+                        <p>I am first year PhD student at   <a href="https://www.insa-lyon.fr/en/">INSA Lyon</a>.
                             <br>
-                            Currently I am an intern at <a href="https://team.inria.fr/chroma/en/" > CHROMA </a> work on <strong>Deep Reinforcement Learning</strong> and <strong>Robotics</strong>.
+                            I work and study in the <a href="https://team.inria.fr/chroma/en/" > INRIA CHROMA </a> team, researching <strong>Deep Reinforcement Learning</strong> for robotic control.
                             <br>
                             My supervisors are <a href="http://liris.cnrs.fr/christian.wolf/">Christian Wolf</a>, <a
                                     href="http://perso.citi-lab.fr/jdibangoy/#/">Jilles Dibangoye</a> and <a
                                     href="http://perso.citi-lab.fr/osimonin/"> Olivier Simonin</a>
                             <br>
-                            My end of Masters internship focuses on the application of Deep Reinforcement Learning to navigation tasks in simulated environments.
+                            My current area of research applies Deep RL in simulated 3D environments.
                         </p>
                     <td width="1%">
                         <img src="./images/photo.png">
@@ -114,7 +114,7 @@
 
                         <p align=center>
                             <a href="mailto:edbeeching<at>gmail<dot>com">Email</a> &nbsp/&nbsp
-                            <a href="./docs/Edward_Beeching_CV_05042018.pdf">CV</a> &nbsp/&nbsp
+                            <a href="./docs/Edward_Beeching_CV_20180619.pdf">CV</a> &nbsp/&nbsp
                             <a href="https://github.com/edbeeching">Github</a> &nbsp/&nbsp
                             <a href="https://www.linkedin.com/in/ed-beeching-3553b468/"> LinkedIn </a> 
                             <!-- <a href="https://twitter.com/fabienbaradel">Twitter</a>-->
