--- a/papers/egomap.html
+++ b/papers/egomap.html
@@ -27,6 +27,7 @@
     padding: 20px;
   }
 
+
   video.header-vid {
     height: 140px;
     border: 1px solid black;
@@ -242,7 +243,10 @@
     </tr>
   </table>
   <br>
-
+  <center>
+    <h1>
+      Abstract</h1>
+  </center>
   <div style="width:800px; margin:0 auto; text-align:justify">
     Tasks involving localization, memorization and planning in partially observable 3D environments are an ongoing
     challenge in Deep Reinforcement Learning. We present EgoMap, a spatially structured neural memory architecture.
@@ -280,7 +284,7 @@
     <tr>
       <td width=200px align=left>
         <!-- <p style="margin-top:4px;"></p> -->
-        <a href="https://arxiv.org/abs/2002.02286"><img style="width:200px" src="egomap_paper_image.jpg" /></a>
+        <a href="https://arxiv.org/abs/2002.02286"><img style="width:200px" src="egomap_paper_image.png" /></a>
         <center>
           <span style="font-size:20pt"><a href="https://arxiv.org/abs/2002.02286">[Paper]</a>
             <!--        <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546v2">[ArXiv]</a>-->
