--- a/papers/egomap.html
+++ b/papers/egomap.html
@@ -168,22 +168,22 @@
     </span></center><br />
   <table align=center width=800px>
     <tr>
-      <td align=center width=230px>
+      <td align=center width=250px>
         <center><span style="font-size:22px"><a href="https://edbeeching.github.io//" target="_blank">Edward
               Beeching</a></span></center>
       </td>
 
-      <td align=center width=230px>
+      <td align=center width=250px>
         <center><span style="font-size:22px"><a href="http://perso.citi-lab.fr/jdibangoy/#/" target="_blank">Jilles
               Dibangoye</a></span></center>
       </td>
 
-      <td align=center width=170px>
+      <td align=center width=250px>
         <center><span style="font-size:22px"><a href="http://perso.citi-lab.fr/osimonin/" target="_blank">Olivier
               Simonin</a></span></center>
       </td>
 
-      <td align=center width=180px>
+      <td align=center width=250px>
         <center><span style="font-size:22px"><a href="https://perso.liris.cnrs.fr/christian.wolf/"
               target="_blank">Christian Wolf</a></span></center>
       </td>
@@ -192,19 +192,25 @@
       <tr />
     <tr>
       <td align=center width=250px>
-        <center><span style="font-size:20px"><a href="https://team.inria.fr/chroma/en/">INRIA CHROMA</a></span></center>
+        <center><span style="font-size:20px"><a href="https://team.inria.fr/chroma/en/">CITI, INRIA CHROMA, INSA
+              Lyon</a> </span></center>
       </td>
       <td align=center width=250px>
-        <center><span style="font-size:20px"><a href="https://team.inria.fr/chroma/en/">INRIA CHROMA</a></span></center>
+        <center><span style="font-size:20px"><a href="https://team.inria.fr/chroma/en/">CITI, INRIA CHROMA, INSA
+              Lyon</a></span></center>
       </td>
-      <td align=center width=150px>
-        <center><span style="font-size:20px"><a href="https://team.inria.fr/chroma/en/">INRIA CHROMA</a></span></center>
+      <td align=center width=250px>
+        <center><span style="font-size:20px"><a href="https://team.inria.fr/chroma/en/">CITI, INRIA CHROMA, INSA
+              Lyon</a></span></center>
       </td>
-      <td align=center width=150px>
-        <center><span style="font-size:20px"><a href="https://liris.cnrs.fr/">LIRIS, CNRS</a> </span></center>
+      <td align=center width=250px>
+        <center><span style="font-size:20px"><a href="https://liris.cnrs.fr/">LIRIS, CNRS, INSA Lyon</a> </span>
+        </center>
       </td>
       <tr />
   </table>
+
+  <p> </p>
   <table align=center width=700px>
     <tr>
       <td align=center width=700px>
@@ -313,7 +319,7 @@
   title={EgoMap: Projective mapping and structured egocentric memory for
     Deep RL},
   author={Beeching, Edward and Dibangoye, Jilles and 
-           and Simonin, Olivier and Wolf, Christian}
+          Simonin, Olivier and Wolf, Christian}
   booktitle={ECMLPKDD},
   year={2020}}
                 </pre>
