added full stop

--- a/papers/learning_to_plan.html
+++ b/papers/learning_to_plan.html
@@ -281,7 +281,7 @@
     structure our neural model with an inductive biasfor dynamic programming based shortest path algorithms, and we
     showthat a particular parameterization of our neural model corresponds tothe Bellman-Ford algorithm. By performing
     an empirical analysis ofour method in simulated photo-realistic 3D environments, we demon-strate that the inclusion
-    of visual features in the learned neural planneroutperforms classical symbolic solutions for graph based planning
+    of visual features in the learned neural planneroutperforms classical symbolic solutions for graph based planning.
   </div>
   <br>
   <hr>
