--- a/index.html
+++ b/index.html
@@ -127,27 +127,116 @@
                 <a href="https://www.linkedin.com/in/ed-beeching-3553b468/"> LinkedIn </a> &nbsp/&nbsp
                 <a href="https://twitter.com/edwardbeeching">Twitter</a>
             </p>
-
-
-
-
         </tr>
-
-
     </table>
-    <h2>Publications</h2>
-    <p><a href="https://arxiv.org/abs/2002.02286"> EgoMap: Projective mapping and structured egocentric memory for Deep
-            RL.
-        </a></p>
 
-    <p><a href="https://arxiv.org/abs/1904.01806"> Deep Reinforcement Learning on a Budget: 3D Control and Reasoning
-            Without a Supercomputer</a></p>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research">
+        <div class="my-auto">
+            <h2 class="mb-1">Publications</h2>
+
+
+            <a onclick="window.open(this.href); return false;" href="./papers/learning_to_plan.html"
+                onkeypress="window.open(this.href); return false;">
+                <papertitle>Learning to plan in uncertain topological maps</papertitle>
+            </a><br>
+            <strong>Edward Beeching</strong>, Jilles
+            Dibangoye, Olivier
+            Simonin, Christian Wolf.
+            (2020) <br>
+
+            <em>ECCV 2020 <strong>(spotlight)</strong></em><br>
+
+            <a onclick="window.open(this.href); return false;" href="https://arxiv.org/abs/2007.05270"
+                onkeypress="window.open(this.href); return false;">PDF</a>
+            <span class="style_2"> | </span>
+            <a onclick="window.open(this.href); return false;" href="papers/learning_to_plan.html"
+                onkeypress="window.open(this.href); return false;">Webpage</a>
+            <!-- <span class="style_2"> | </span> -->
+            <!-- <a onclick="window.open(this.href); return false;" href="" <!-- <!--
+                            onkeypress="window.open(this.href); return false;">Talk</a> -->
+            <!-- <span class="style_2"> | </span>
+                        <a onclick="window.open(this.href); return false;"
+                            href="https://www.cs.cmu.edu/~dchaplot/talks/cvpr20-semantic-exploration.pdf"
+                            onkeypress="window.open(this.href); return false;">Slides</a> -->
+
+            <br>
+            <br>
+
+            <a onclick="window.open(this.href); return false;" href="./papers/learning_to_plan.html"
+                onkeypress="window.open(this.href); return false;">
+                <papertitle>EgoMap: Projective mapping and structured egocentric memory for Deep RL
+                </papertitle>
+            </a><br>
+            <strong>Edward Beeching</strong>, Jilles
+            Dibangoye, Olivier
+            Simonin, Christian Wolf.
+            (2020) <br>
+            <em>ECML-PKDD 2020</em><br>
+            <a onclick="window.open(this.href); return false;" href="https://arxiv.org/abs/2002.02286"
+                onkeypress="window.open(this.href); return false;">PDF</a>
+            <span class="style_2"> | </span>
+            <a onclick="window.open(this.href); return false;" href="papers/egomap.html"
+                onkeypress="window.open(this.href); return false;">Webpage</a>
+            <span class="style_2"> | </span>
+            <a onclick="window.open(this.href); return false;" href="https://github.com/edbeeching/ego_map"
+                onkeypress="window.open(this.href); return false;">Code</a>
+            <!-- <a onclick="window.open(this.href); return false;" href="" <!-- <!--
+                            onkeypress="window.open(this.href); return false;">Talk</a> -->
+            <!-- <span class="style_2"> | </span>
+                        <a onclick="window.open(this.href); return false;"
+                            href="https://www.cs.cmu.edu/~dchaplot/talks/cvpr20-semantic-exploration.pdf"
+                            onkeypress="window.open(this.href); return false;">Slides</a> -->
+
+            <br>
+            <br>
+        </div>
+
+        <a onclick="window.open(this.href); return false;" href="./papers/3d_control_deep_rl.html"
+            onkeypress="window.open(this.href); return false;">
+            <papertitle>Deep Reinforcement Learning on a Budget: 3D Control and Reasoning
+                Without a
+                Supercomputer
+            </papertitle>
+        </a><br>
+        <strong>Edward Beeching</strong>, Jilles
+        Dibangoye, Olivier
+        Simonin, Christian Wolf.
+        (2020) <br>
+        <em>ICPR 2020</em><br>
+        <a onclick="window.open(this.href); return false;" href="https://arxiv.org/abs/1904.01806"
+            onkeypress="window.open(this.href); return false;">PDF</a>
+        <span class="style_2"> | </span>
+        <a onclick="window.open(this.href); return false;" href="papers/3d_control_deep_rl"
+            onkeypress="window.open(this.href); return false;">Webpage</a>
+        <span class="style_2"> | </span>
+        <a onclick="window.open(this.href); return false;" href="https://github.com/edbeeching/3d_control_deep_rl"
+            onkeypress="window.open(this.href); return false;">Code</a>
+        <!-- <a onclick="window.open(this.href); return false;" href="" <!-- <!--
+                            onkeypress="window.open(this.href); return false;">Talk</a> -->
+        <!-- <span class="style_2"> | </span>
+                        <a onclick="window.open(this.href); return false;"
+                            href="https://www.cs.cmu.edu/~dchaplot/talks/cvpr20-semantic-exploration.pdf"
+                            onkeypress="window.open(this.href); return false;">Slides</a> -->
+
+        <br>
+        <br>
+
+
+
+        </div>
+
+
+    </section>
+
+
 
     <h2>Agent Examples</h2>
     <p>Image-goal based navigation in a 3D scan of our laboratory. The map is not provided to the agent.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/oUVpJdCX2x8" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p>Example of a Deep Reinforcement Learning Agent trained to collect a sequence of objects with the Advantage Actor
+    <p>Example of a Deep Reinforcement Learning Agent trained to collect a sequence of objects with the Advantage
+        Actor
         Critic Algorithm. The map is not provided to the agent.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/9RMMPDcwuHw" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
