added code links for l2p

--- a/index.html
+++ b/index.html
@@ -152,6 +152,10 @@
             <span class="style_2"> | </span>
             <a onclick="window.open(this.href); return false;" href="papers/learning_to_plan.html"
                 onkeypress="window.open(this.href); return false;">Webpage</a>
+            <span class="style_2"> | </span>
+            <a onclick="window.open(this.href); return false;" href="https://github.com/edbeeching/learning_to_plan"
+                onkeypress="window.open(this.href); return false;">Code</a>
+            
             <!-- <span class="style_2"> | </span> -->
             <!-- <a onclick="window.open(this.href); return false;" href="" <!-- <!--
                             onkeypress="window.open(this.href); return false;">Talk</a> -->
