--- a/papers/learning_to_plan.html
+++ b/papers/learning_to_plan.html
@@ -240,18 +240,18 @@
   <table align=center width=700px>
     <tr>
       <td align=center width=100px>
-        <center><span style="font-size:28px"><a href="">[Paper (TODO)]</a></span>
+        <center><span style="font-size:28px"><a href="https://arxiv.org/abs/2007.05270">[Paper]</a></span>
         </center>
       </td>
       <td align=center width=100px>
-        <center><span style="font-size:28px"><a href="">[Code(TODO)]</a></span>
+        <center><span style="font-size:28px"><a href="https://github.com/edbeeching/learning_to_plan">[Code]</a></span>
         </center>
       </td>
       <td align=center width=100px>
-        <center><span style="font-size:28px"><a href="">[Talk (TODO)]</a></span></center>
+        <center><span style="font-size:28px"><a href="https://youtu.be/rW6kLl5Y9PU">[Talk]</a></span></center>
       </td>
       <td align=center width=100px>
-        <center><span style="font-size:28px"><a href="">[Slides (TODO)]</a></span>
+        <center><span style="font-size:28px"><a href="learning_to_plan_slides.pdf">[Slides]</a></span>
         </center>
       </td>
       <tr />
@@ -287,13 +287,12 @@
   <hr>
 
   <center>
-    <h1>Presentation (TODO)</h1>
+    <h1>Presentation</h1>
   </center>
   <table align=center width=300px>
     <tr>
       <td align=center width=300px>
-        <iframe width="800" height="450" src="" frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rW6kLl5Y9PU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </td>
     </tr>
   </table>
@@ -307,9 +306,9 @@
     <tr>
       <td width=200px align=left>
         <!-- <p style="margin-top:4px;"></p> -->
-        <a href=""><img style="width:200px" src="learning_to_plan_paper_image.png" /></a>
+        <a href="https://arxiv.org/abs/2007.05270"><img style="width:200px" src="learning_to_plan_paper_image.png" /></a>
         <center>
-          <span style="font-size:20pt"><a href="">[Paper]</a>
+          <span style="font-size:20pt"><a href="https://arxiv.org/abs/2007.05270">[Paper]</a>
             <!--        <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546v2">[ArXiv]</a>-->
             <!--        <span style="font-size:20pt"><a href="resources/slides.pdf">[Slides]</a></span>-->
             <!--        <span style="font-size:20pt"><a href="resources/poster.pdf">[Poster]</a></span>-->
