fixed typos in l2p abstract

--- a/papers/learning_to_plan.html
+++ b/papers/learning_to_plan.html
@@ -271,17 +271,17 @@
       Abstract</h1>
   </center>
   <div style="width:800px; margin:0 auto; text-align:justify">
-    We train an agent to navigate in 3D environments usinga hierarchical strategy including a high-level graph based
-    planner anda local policy. Our main contribution is a data driven learning basedapproach for planning under
-    uncertainty in topological maps, requiringan estimate of shortest paths in valued graphs with a probabilistic
-    struc-ture. Whereas classical symbolic algorithms achieve optimal results onnoise-less topologies, or optimal
-    results in a probabilistic sense on graphswith probabilistic structure, we aim to show that machine learning
-    canovercome missing information in the graph by taking into account richhigh-dimensional node features, for instance
-    visual information availableat each location of the map. Compared to purely learned neural whitebox algorithms, we
-    structure our neural model with an inductive biasfor dynamic programming based shortest path algorithms, and we
-    showthat a particular parameterization of our neural model corresponds tothe Bellman-Ford algorithm. By performing
-    an empirical analysis ofour method in simulated photo-realistic 3D environments, we demon-strate that the inclusion
-    of visual features in the learned neural planneroutperforms classical symbolic solutions for graph based planning.
+    We train an agent to navigate in 3D environments using a hierarchical strategy including a high-level graph based
+    planner and a local policy. Our main contribution is a data driven learning based approach for planning under
+    uncertainty in topological maps, requiring an estimate of shortest paths in valued graphs with a probabilistic
+    structure. Whereas classical symbolic algorithms achieve optimal results on noise-less topologies, or optimal
+    results in a probabilistic sense on graphs with probabilistic structure, we aim to show that machine learning
+    can overcome missing information in the graph by taking into account rich high-dimensional node features, for instance
+    visual information available at each location of the map. Compared to purely learned neural whitebox algorithms, we
+    structure our neural model with an inductive bias for dynamic programming based shortest path algorithms, and we
+    show that a particular parameterization of our neural model corresponds to the Bellman-Ford algorithm. By performing
+    an empirical analysis ofour method in simulated photo-realistic 3D environments, we demonstrate that the inclusion
+    of visual features in the learned neural planner outperforms classical symbolic solutions for graph based planning.
   </div>
   <br>
   <hr>
