--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
                                 <a href="http://perso.citi-lab.fr/osimonin/"> Olivier Simonin</a>
                                 <br>
                                 <br> My current area of research involves Deep Reinforcement Learning approaches to navigation, planning and control in the field of robotics. I augment Deep Neural Network architectures with structured representations
-                                such as metric and topological maps to improves an agents estimate of the environment's state. <br><br>My work involves state of the convolutional, recurrent and transformer based network architectures applied to typical
-                                RL optimization with on (A2C, PPO) and off policy (SAC, Q-learning) algorithms. I also often consider auxillary optimization objectives to improve agent performance, such as classification, regress and semantic segmentation.
+                                such as metric and topological maps to improves an agents estimate of the environment's state. <br><br>My work involves state of the area convolutional, recurrent and transformer based network architectures applied to typical
+                                RL optimization with on-policy (A2C, PPO, APPO) and off-policy (SAC, Q-learning, R2D2) algorithms. I also often consider auxillary optimization objectives to improve agent performance, such as classification, regression
+                                and semantic segmentation.
                             </p>
                             <td width="1%">
                                 <img src="./images/photo.png">
