--- a/papers/godot_rl_agents.html
+++ b/papers/godot_rl_agents.html
@@ -226,8 +226,29 @@
       </td>
       <tr />
   </table>
-  <hr>
 
+ <br>
+   <table align=center width=700px>
+    <tr>
+      <td align=center width=100px>
+        <center><span style="font-size:28px"><a href="https://github.com/edbeeching/godot_rl_agents">[Code]</a></span>
+        </center>
+      </td>
+      <td align=center width=100px>
+        <center><span style="font-size:28px"><a href="https://youtu.be/g1MlZSFqIj4">[Trailer]</a></span></center>
+      </td>
+      <tr />
+  </table><br />
+    <hr>
+  <center>
+    <h1>
+      Abstract</h1>
+  </center>
+  <div style="width:800px; margin:0 auto; text-align:justify">
+We present Godot Reinforcement Learning (RL) Agents, an open-source interface for developing environments and agents in the Godot Game Engine. The Godot RL Agents interface allows the design, creation and learning of agent behaviors in challenging 2D and 3D environments with various on-policy and off-policy Deep RL algorithms. We provide a standard Gym interface, with wrappers for learning in the Ray RLlib and Stable Baselines RL frameworks. This allows users access to over 20 state of art on-policy, off-policy and multi-agent RL algorithms. The framework is a versatile tool that allows researches and game designers the ability to create environments with discrete, continuous and mixed action spaces. The interface is relatively performant, with 12k interactions per second on a high end laptop computer, when parallized on 4 CPU cores. 
+  </div>
+  <br>
+    <hr>
   <center>
     <h1>Trailer</h1>
   </center>
@@ -241,84 +262,10 @@
   <br>
   <hr>
   <p> </p>
-  <table align=center width=700px>
-    <tr>
-      <td align=center width=100px>
-        <center><span style="font-size:28px"><a href="https://github.com/edbeeching/godot_rl_agents">[Code]</a></span>
-        </center>
-      </td>
-      <td align=center width=100px>
-        <center><span style="font-size:28px"><a href="https://youtu.be/g1MlZSFqIj4">[Trailer]</a></span></center>
-      </td>
-      <tr />
-  </table><br />
+
 
   <!--       <center><h2>Project Video</h2></center> -->
-  <br>
-  <center>
-    <h1>
-      Abstract</h1>
-  </center>
-  <div style="width:800px; margin:0 auto; text-align:justify">
-    We introduce an open source interface for developing Reinforcement Learning environments and agents in the Godot Game Engine. 
-    The interface allows the design, creation and training of challenging 2D and 3D environments with various on-policy and off-policy Deep RL algorithms. 
-  </div>
-  <br>
-
-
-  <table align=center width=850px>
-    <center>
-      <h1>Paper and Bibtex</h1>
-    </center>
-    <tr>
-      <td width=200px align=left>
-        <!-- <p style="margin-top:4px;"></p> -->
-        <a href="https://arxiv.org/abs/2007.05270"><img style="width:200px" src="learning_to_plan_paper_image.png" /></a>
-        <center>
-          <span style="font-size:20pt"><a href="https://arxiv.org/abs/2007.05270">[Paper]</a>
-            <!--        <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546v2">[ArXiv]</a>-->
-            <!--        <span style="font-size:20pt"><a href="resources/slides.pdf">[Slides]</a></span>-->
-            <!--        <span style="font-size:20pt"><a href="resources/poster.pdf">[Poster]</a></span>-->
-        </center>
-      </td>
-      <td width=50px align=center>
-      </td>
-      <td width=550px align=left>
-        <!-- <p style="margin-top:4px;"></p> -->
-        <!--            Beeching, E., Dibangoye, J., Simonin, O., and Wolf, C., 2020. EgoMap: Projective mapping and structured egocentric memory for
-    Deep RL. In proceedings of the European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases.-->
-        <p style="text-align:left;"><b><span style="font-size:20pt">Citation</span></b><br /><span
-            style="font-size:6px;">&nbsp;<br /></span> <span style="font-size:15pt">Beeching, E., Dibangoye, J.,
-            Simonin, O., and Wolf, C., 2020. Learning to plan with uncertain topological maps. In proceedings of the
-            European Conference on Computer Vision</span></p>
-        <!-- <p style="margin-top:20px;"></p> -->
-        <span style="font-size:20pt"><a shape="rect" href="javascript:togglebib('assemblies19_bib')"
-            class="togglebib">[Bibtex]</a></span>
-        <div class="paper" id="assemblies19_bib">
-          <pre xml:space="preserve">
-@inproceedings{beeching2020learntoplan,
-  title={Learning to plan with uncertain topological maps.
-  },
-  author={Beeching, Edward and Dibangoye, Jilles and 
-          Simonin, Olivier and Wolf, Christian}
-  booktitle={European Conference on Computer Vision},
-  year={2020}}
-                </pre>
-        </div>
-      </td>
-    </tr>
-    <tr>
-      <td width=250px align=left>
-      </td>
-      <td width=50px align=center>
-      </td>
-      <td width=550px align=left>
-
-      </td>
-    </tr>
-  </table>
-  <br>
-  <hr>
+ 
 
   <table align=center width=800px>
     <tr>
