--- a/papers/gdrl.html
+++ b/papers/gdrl.html
@@ -227,9 +227,13 @@
       <tr />
   </table>
 
- <br>
-   <table align=center width=700px>
+  <br>
+  <table align=center width=700px>
     <tr>
+      <td align=center width=100px>
+        <center><span style="font-size:28px"><a href="https://arxiv.org/abs/2112.03636">[Paper]</a></span>
+        </center>
+      </td>
       <td align=center width=100px>
         <center><span style="font-size:28px"><a href="https://github.com/edbeeching/godot_rl_agents">[Code]</a></span>
         </center>
@@ -239,23 +243,31 @@
       </td>
       <tr />
   </table><br />
-    <hr>
+  <hr>
   <center>
     <h1>
       Abstract</h1>
   </center>
   <div style="width:800px; margin:0 auto; text-align:justify">
-We present Godot Reinforcement Learning (RL) Agents, an open-source interface for developing environments and agents in the Godot Game Engine. The Godot RL Agents interface allows the design, creation and learning of agent behaviors in challenging 2D and 3D environments with various on-policy and off-policy Deep RL algorithms. We provide a standard Gym interface, with wrappers for learning in the Ray RLlib and Stable Baselines RL frameworks. This allows users access to over 20 state of art on-policy, off-policy and multi-agent RL algorithms. The framework is a versatile tool that allows researches and game designers the ability to create environments with discrete, continuous and mixed action spaces. The interface is relatively performant, with 12k interactions per second on a high end laptop computer, when parallized on 4 CPU cores. 
+    We present Godot Reinforcement Learning (RL) Agents, an open-source interface for developing environments and agents
+    in the Godot Game Engine. The Godot RL Agents interface allows the design, creation and learning of agent behaviors
+    in challenging 2D and 3D environments with various on-policy and off-policy Deep RL algorithms. We provide a
+    standard Gym interface, with wrappers for learning in the Ray RLlib and Stable Baselines RL frameworks. This allows
+    users access to over 20 state of art on-policy, off-policy and multi-agent RL algorithms. The framework is a
+    versatile tool that allows researches and game designers the ability to create environments with discrete,
+    continuous and mixed action spaces. The interface is relatively performant, with 12k interactions per second on a
+    high end laptop computer, when parallized on 4 CPU cores.
   </div>
   <br>
-    <hr>
+  <hr>
   <center>
     <h1>Trailer</h1>
   </center>
   <table align=center width=300px>
     <tr>
       <td align=center width=300px>
-<iframe width="960" height="540" src="https://www.youtube.com/embed/g1MlZSFqIj4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="960" height="540" src="https://www.youtube.com/embed/g1MlZSFqIj4" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </td>
     </tr>
   </table>
@@ -265,7 +277,61 @@ We present Godot Reinforcement Learning (RL) Agents, an open-source interface fo
 
 
   <!--       <center><h2>Project Video</h2></center> -->
- 
+
+  <table align=center width=850px>
+    <center>
+      <h1>Paper and Bibtex</h1>
+    </center>
+    <tr>
+      <td width=200px align=left>
+        <!-- <p style="margin-top:4px;"></p> -->
+        <a href="https://arxiv.org/abs/2112.03636"><img style="width:200px" src="gdrl_paper_image.png" /></a>
+        <center>
+          <span style="font-size:20pt"><a href="https://arxiv.org/abs/2112.03636">[Paper]</a>
+            <!--        <span style="font-size:20pt"><a href="https://arxiv.org/abs/1902.05546v2">[ArXiv]</a>-->
+            <!--        <span style="font-size:20pt"><a href="resources/slides.pdf">[Slides]</a></span>-->
+            <!--        <span style="font-size:20pt"><a href="resources/poster.pdf">[Poster]</a></span>-->
+        </center>
+      </td>
+      <td width=50px align=center>
+      </td>
+      <td width=550px align=left>
+        <!-- <p style="margin-top:4px;"></p> -->
+        <!--            Beeching, E., Dibangoye, J., Simonin, O., and Wolf, C., 2020. EgoMap: Projective mapping and structured egocentric memory for
+Deep RL. In proceedings of the European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases.-->
+        <p style="text-align:left;"><b><span style="font-size:20pt">Citation</span></b><br /><span
+            style="font-size:6px;">&nbsp;<br /></span> <span style="font-size:15pt">Beeching, E., Dibangoye, J.,
+            Simonin, O., and Wolf, C., 2021. Godot Reinforcement Learning Agents.
+
+            AAAI-22 Workshop on Reinforcement Learning in Games</span></p>
+        <!-- <p style="margin-top:20px;"></p> -->
+        <span style="font-size:20pt"><a shape="rect" href="javascript:togglebib('gdrl_bib')"
+            class="togglebib">[Bibtex]</a></span>
+        <div class="paper" id="gdrl_bib">
+          <pre xml:space="preserve">
+@article{beeching2021godotrlagents,
+  author={Beeching, Edward and Dibangoye, Jilles and 
+    Simonin, Olivier and Wolf, Christian},
+title = {Godot Reinforcement Learning Agents},
+journal = {{arXiv preprint arXiv:2112.03636.},
+year = {2021}, 
+}
+            </pre>
+        </div>
+      </td>
+    </tr>
+    <tr>
+      <td width=250px align=left>
+      </td>
+      <td width=50px align=center>
+      </td>
+      <td width=550px align=left>
+
+      </td>
+    </tr>
+  </table>
+  <br>
+  <hr>
 
   <table align=center width=800px>
     <tr>
