--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research">
         <div class="my-auto">
             <h2 class="mb-1">Publications</h2>
-            <a onclick="window.open(this.href); return false;" href="./papers/learning_to_plan.html"
+            <a onclick="window.open(this.href); return false;" href="./papers/gdrl.html"
                 onkeypress="window.open(this.href); return false;">
                 <papertitle>Godot Reinforcement Learning Agents</papertitle>
             </a><br>
