--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <br> My current area of research involves Deep Reinforcement Learning approaches to
                                 navigation, planning and control in the field of robotics. I augment Deep Neural Network
                                 architectures with structured representations
-                                such as metric and topological maps to improves an agents estimate of the environment's
+                                such as metric and topological maps to improve an agent's estimate of the environment's
                                 state. <br><br>My work involves state of the area convolutional, recurrent and
                                 transformer based network architectures applied to typical
                                 RL optimization with on-policy (A2C, PPO, APPO) and off-policy (SAC, Q-learning, R2D2)
