Added phd manuscript & smartgraph paper

--- a/index.html
+++ b/index.html
@@ -108,23 +108,20 @@
 
                             <!-- ######## ABSTRACT #########-->
 
-                            <p>I am third year PhD student at <a href="https://www.insa-lyon.fr/en/">INSA Lyon</a>.
-                                <br> I work and study in the <a href="https://team.inria.fr/chroma/en/"> INRIA CHROMA
-                                </a> team, researching <strong>Deep Reinforcement Learning</strong> for robotic control.
-                                <br> My supervisors are <a href="http://liris.cnrs.fr/christian.wolf/">Christian
-                                    Wolf</a>, <a href="http://perso.citi-lab.fr/jdibangoy/#/">Jilles Dibangoye</a> and
-                                <a href="http://perso.citi-lab.fr/osimonin/"> Olivier Simonin</a>
-                                <br>
-                                <br> My current area of research involves Deep Reinforcement Learning approaches to
-                                navigation, planning and control in the field of robotics. I augment Deep Neural Network
-                                architectures with structured representations
-                                such as metric and topological maps to improve an agent's estimate of the environment's
-                                state. <br><br>My work involves state of the area convolutional, recurrent and
+                            <p> I am a Machine Learning Research Scientist at <a href="https://huggingface.co/">Hugging
+                                    Face</a>.
+                                I work on problems involving Embodied Learning, by developing novel Deep Reinforcement
+                                Learning approaches and custom simulation environments.
+
+                                My PhD is in Deep Reinforcement Learning approaches to planning and navigation in
+                                robotics, which I studied at <a href="https://www.insa-lyon.fr/en/">INSA Lyon</a>, as
+                                part of the <a href="https://team.inria.fr/chroma/en/"> INRIA CHROMA
+                                </a> team.
+                                <br><br>My work involves state of the art convolutional, recurrent and
                                 transformer based network architectures applied to typical
                                 RL optimization with on-policy (A2C, PPO, APPO) and off-policy (SAC, Q-learning, R2D2)
                                 algorithms. I also often consider auxillary optimization objectives to improve agent
-                                performance, such as classification, regression
-                                and semantic segmentation.
+                                performance, such as classification, regression and semantic segmentation.
                             </p>
                         <td width="1%">
                             <img src="./images/photo.png">
@@ -162,6 +159,35 @@
                 onkeypress="window.open(this.href); return false;">Webpage</a>
             <span class="style_2"> | </span>
             <a onclick="window.open(this.href); return false;" href="https://github.com/edbeeching/godot_rl_agents"
+                onkeypress="window.open(this.href); return false;">Code</a>
+
+            <!-- <span class="style_2"> | </span> -->
+            <!-- <a onclick="window.open(this.href); return false;" href="" <!-- <!--
+                            onkeypress="window.open(this.href); return false;">Talk</a> -->
+            <!-- <span class="style_2"> | </span>
+                        <a onclick="window.open(this.href); return false;"
+                            href="https://www.cs.cmu.edu/~dchaplot/talks/cvpr20-semantic-exploration.pdf"
+                            onkeypress="window.open(this.href); return false;">Slides</a> -->
+
+            <br>
+            <br>
+            <a onclick="window.open(this.href); return false;" href="./papers/smartgraph.html"
+                onkeypress="window.open(this.href); return false;">
+                <papertitle>Graph augmented Deep Reinforcement Learning in the GameRLand3D environment
+                </papertitle>
+            </a><br>
+            <strong>Edward Beeching</strong>, Maxim Peter, Philippe Marcotte, Jilles Debangoye, Olivier Simonin, Joshua
+            Romoff, Christian Wolf. (2021) <br>
+
+            <em>AAAI-22 Workshop on Reinforcement Learning in Games</em><br>
+
+            <a onclick="window.open(this.href); return false;" href="https://arxiv.org/abs/2112.11731"
+                onkeypress="window.open(this.href); return false;">PDF</a>
+            <span class="style_2"> | </span>
+            <a onclick="window.open(this.href); return false;" href="papers/smartgraph.html"
+                onkeypress="window.open(this.href); return false;">Webpage</a>
+            <span class="style_2"> | </span>
+            <a onclick="window.open(this.href); return false;" href="https://github.com/ubisoft/SmartNavMapGenerator"
                 onkeypress="window.open(this.href); return false;">Code</a>
 
             <!-- <span class="style_2"> | </span> -->
@@ -259,6 +285,14 @@
         </div>
 
 
+    </section>
+
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research">
+        <div class="my-auto">
+            <h2 class="mb-1">PhD Thesis</h2>
+            <a onclick="window.open(this.href); return false;" href="./docs/Edward_Beeching_PhD_manuscript_20220428.pdf"
+                onkeypress="window.open(this.href); return false;">Large-scale Learning of Autonomous Agent Behavior
+                with Structured Deep Reinforment Learning </a>
     </section>
 
     <h2>Agent Examples</h2>
