--- a/index.html
+++ b/index.html
@@ -109,19 +109,12 @@
                             <!-- ######## ABSTRACT #########-->
 
                             <p> I am a Machine Learning Research Scientist at <a href="https://huggingface.co/">Hugging
-                                    Face</a>.
-                                I work on problems involving Embodied Learning, by developing novel Deep Reinforcement
-                                Learning approaches and custom simulation environments.
-
+                                    Face</a>. My research is predominantly preference fine-tuning of Large Language Models & Embodied Learning.
                                 My PhD is in Deep Reinforcement Learning approaches to planning and navigation in
                                 robotics, which I studied at <a href="https://www.insa-lyon.fr/en/">INSA Lyon</a>, as
                                 part of the <a href="https://team.inria.fr/chroma/en/"> INRIA CHROMA
                                 </a> team.
-                                <br><br>My work involves state of the art convolutional, recurrent and
-                                transformer based network architectures applied to typical
-                                RL optimization with on-policy (A2C, PPO, APPO) and off-policy (SAC, Q-learning, R2D2)
-                                algorithms. I also often consider auxillary optimization objectives to improve agent
-                                performance, such as classification, regression and semantic segmentation.
+
                             </p>
                         <td width="1%">
                             <img src="./images/photo.png">
