--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 
                             <!-- ######## ABSTRACT #########-->
 
-                            <p> I am a Machine Learning Research Scientist at <a href="https://huggingface.co/">Hugging
-                                    Face</a>. My research is predominantly preference fine-tuning of Large Language Models & Embodied Learning.
+                            <p> I am a Machine Learning Research Scientist at <a href="https://huggingface.co/">Hugging Face</a>. My research is predominantly preference fine-tuning of Large Language Models & Embodied Learning.
                                 My PhD is in Deep Reinforcement Learning approaches to planning and navigation in
                                 robotics, which I studied at <a href="https://www.insa-lyon.fr/en/">INSA Lyon</a>, as
                                 part of the <a href="https://team.inria.fr/chroma/en/"> INRIA CHROMA
